# scriptvault

./: COMMANDS.md  Cargo.toml  QUICK-QUIDE.md  README.md  build.sh  demo.sh  install.ps1  install.sh
.github/workflows/: release.yml
server/: Cargo.toml  Dockerfile  fly.toml
server/migrations/: 20260325070905_initial.sql
server/src/: auth.rs  db.rs  error.rs  main.rs  middleware.rs  r2.rs  state.rs
server/src/routes/: auth.rs  mod.rs  scripts.rs  vault.rs
src/: adapt.rs  auth.rs  cli.rs  config.rs  constants.rs  context.rs  execution.rs  lib.rs  main.rs  script.rs  sync.rs  utils.rs  vault.rs  versions.rs
src/storage/: commands.rs  local.rs  mod.rs
src/sync/: manager.rs  mod.rs  remote.rs
tests/: integration_test.rs
