[package]
name = "scriptvault"
version = "0.1.0"
edition = "2024"
authors = ["リッキー"]
description = "Terminal script vault for developers"
license = "MIT"
repository = "https://github.com/ricky-ultimate/scriptvault"
keywords = ["cli", "scripts", "vault", "productivity", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sv"
path = "src/main.rs"

[lib]
name = "scriptvault"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
git2 = "0.18"
dialoguer = "0.11"
which = "6.0"
uuid = { version = "1.11", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
